Apply proofreading changes to web. Also:
- Ackknowledgements
- Add chapter navigation to top of pages
- Some other minor style tweaks

--- a/asset/template.html
+++ b/asset/template.html
@@ -25,13 +25,18 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  {{prev}}
+  {{next}}
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>{{header}}</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a>{{section_header}}</h1>
 {{body}}
 <nav>
   {{prev}}
   {{next}}
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
