--- a/html/component.html
+++ b/html/component.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="decoupling-patterns.html">Previous Chapter</a></span>
+  <span class="next"><a href="event-queue.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Component</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="decoupling-patterns.html">Decoupling Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
@@ -240,7 +245,7 @@ your data in the order that the CPU wants it.</p>
 isolate each pattern. Many design patterns exist to contain code that itself
 isn&#8217;t part of the pattern. In order to distill the pattern down to its essence,
 I try to cut as much of that out as possible, but at some point it becomes a bit
-like explaining how an engine works without mentioning fuel or oil.</p>
+like explaining how to organize a closet without showing any clothes.</p>
 <p>The Component pattern is a particularly hard one. You can&#8217;t get a real feel for
 it without seeing some code for each of the domains that it decouples, so I&#8217;ll
 have to sketch in a bit more of Bj&oslash;rn&#8217;s code than I&#8217;d like. The pattern is
@@ -1014,7 +1019,7 @@ strategy.</p>
 <nav>
   <span class="prev">&larr; <a href="decoupling-patterns.html">Previous Chapter</a></span>
   <span class="next"><a href="event-queue.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
