--- a/html/design-patterns-revisited.html
+++ b/html/design-patterns-revisited.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="architecture-performance-and-games.html">Previous Chapter</a></span>
+  <span class="next"><a href="command.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Design Patterns Revisited</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p><em>Design Patterns: Elements of Reusable Object-Oriented Software</em> is nearly
@@ -56,7 +61,7 @@ href="state.html">State</a>).</p>
 <nav>
   <span class="prev">&larr; <a href="architecture-performance-and-games.html">Previous Chapter</a></span>
   <span class="next"><a href="command.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
