--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,7 @@
 
 <h2>Table of Contents</h2>
 <ul>
+  <li><a href="acknowledgements.html">Acknowledgements</a>
   <li><a href="introduction.html">Introduction</a>
     <ul>
       <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
@@ -111,7 +112,7 @@
   <p><small>(I post less than once a month. Don&#8217;t worry, I won&#8217;t spam you.)</small></p>
 </div>
 
-<a class="start-reading" href="introduction.html">Start Reading!</a>
+<a class="start-reading" href="acknowledgements.html">Start Reading!</a>
 
 <div class="narrow-toc">
 <h2>Table of Contents</h2>
@@ -119,6 +120,7 @@
 <tr>
 <td width="50%">
 <ul>
+  <li><a href="acknowledgements.html">Acknowledgements</a>
   <li><a href="introduction.html">Introduction</a>
     <ul>
       <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
