--- a/html/introduction.html
+++ b/html/introduction.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="acknowledgements.html">Previous Chapter</a></span>
+  <span class="next"><a href="architecture-performance-and-games.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Introduction</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p>In fifth grade, my friends and I were given access to a little unused
@@ -68,7 +73,7 @@ of southern Louisiana. If it wasn&#8217;t so blisteringly hot outside, there&#82
 good chance this would be a herpetology book instead of a programming one.</p>
 </aside>
 
-<p>At first, the challenge was just getting something on screen. Then, it became
+<p>At first, the challenge was just getting something working. Then, it became
 figuring out how to write programs bigger than what would fit in my head. Instead
 of just reading about &#8220;How to Program in C++&#8221;, I started trying to find books
 about how to <em>organize</em> programs.</p>
@@ -131,7 +136,7 @@ another?</p>
 </li>
 <li>
 <p><strong>Whole-engine books.</strong> In contrast, these try to span all of the different
-  parts of an entire game engine. They are composed to build a
+  parts of an entire game engine. They are oriented towards building a
   complete engine suited to some specific genre of game, usually a 3D first-person shooter.</p>
 </li>
 </ul>
@@ -143,7 +148,7 @@ know how to tie them together gracefully?</p>
 genre-specific. Especially with the rise of mobile and casual gaming, we&#8217;re in
 a period where lots of different genres of games are being created. We aren&#8217;t
 all just cloning Quake anymore. Books that walk you through a single engine
-aren&#8217;t a good fit when <em>your</em> game doesn&#8217;t fit that mold.</p>
+aren&#8217;t helpful when <em>your</em> game doesn&#8217;t fit that mold.</p>
 <p>Instead, what I&#8217;m trying to do here is more <span name="carte"><em>&agrave; la
 carte</em></span>. Each of the chapters in this book is an independent idea that
 you can apply to your code. This way, you can mix and match them in a way that
@@ -307,9 +312,9 @@ refine (or refute!) the patterns in this book, you contribute to the software
 community. If you have suggestions, corrections, or other feedback about
 what&#8217;s in here, please get in touch!</p>
 <nav>
-  
+  <span class="prev">&larr; <a href="acknowledgements.html">Previous Chapter</a></span>
   <span class="next"><a href="architecture-performance-and-games.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
