--- a/html/type-object.html
+++ b/html/type-object.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="subclass-sandbox.html">Previous Chapter</a></span>
+  <span class="next"><a href="decoupling-patterns.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Type Object</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="behavioral-patterns.html">Behavioral Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
@@ -774,7 +779,7 @@ the object is now in a state that makes sense for the new type.</p>
 </li>
 <li>
 <p><em>Looking up attributes is slower.</em> To get a given piece of data from a
-    type object, we may now need to walk up the inheritance chain to find
+    type object, we might need to walk up the inheritance chain to find
     the type that ultimately decides the value. If we&#8217;re in
     performance-critical code, we may not want to spend time on this.</p>
 </li>
@@ -837,7 +842,7 @@ having our Type Object serve double duty as a State too.</p>
 <nav>
   <span class="prev">&larr; <a href="subclass-sandbox.html">Previous Chapter</a></span>
   <span class="next"><a href="decoupling-patterns.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
