--- a/html/behavioral-patterns.html
+++ b/html/behavioral-patterns.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="update-method.html">Previous Chapter</a></span>
+  <span class="next"><a href="bytecode.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Behavioral Patterns</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p>Once you&#8217;ve built your game&#8217;s set and festooned it with actors and props, all
@@ -51,7 +56,7 @@ data.</p>
 <nav>
   <span class="prev">&larr; <a href="update-method.html">Previous Chapter</a></span>
   <span class="next"><a href="bytecode.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
