--- a/html/decoupling-patterns.html
+++ b/html/decoupling-patterns.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="type-object.html">Previous Chapter</a></span>
+  <span class="next"><a href="component.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Decoupling Patterns</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p>Once you get the hang of a programming language, writing code to do what you
@@ -49,7 +54,7 @@ code access a facility without being bound to the code that provides it.</p>
 <nav>
   <span class="prev">&larr; <a href="type-object.html">Previous Chapter</a></span>
   <span class="next"><a href="component.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
