--- a/html/optimization-patterns.html
+++ b/html/optimization-patterns.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="service-locator.html">Previous Chapter</a></span>
+  <span class="next"><a href="data-locality.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Optimization Patterns</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p>While the rising tide of faster and faster hardware has lifted most software
@@ -53,7 +58,7 @@ inhabitants&#8217; arrangement in space.</p>
 <nav>
   <span class="prev">&larr; <a href="service-locator.html">Previous Chapter</a></span>
   <span class="next"><a href="data-locality.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
