--- a/html/singleton.html
+++ b/html/singleton.html
@@ -25,6 +25,11 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
+<nav class="top">
+  <span class="prev">&larr; <a href="prototype.html">Previous Chapter</a></span>
+  <span class="next"><a href="state.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
+</nav>
 <h1>Singleton</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
 <p>This chapter is an anomaly. Every other chapter in this book shows
@@ -157,8 +162,8 @@ singleton can even refer to another when initializing itself.</p>
 <p><strong>You can subclass the singleton.</strong> This is a powerful but often overlooked
     capability. Let&#8217;s say we need our file system wrapper to be cross-platform.
     To make this work, we want it to be an abstract interface for a file system
-    with subclasses that implement the interface for each platform. Here are the
-    basic classes:</p>
+    with subclasses that implement the interface for each platform. Here is the
+    base class:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">FileSystem</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
@@ -166,8 +171,11 @@ singleton can even refer to another when initializing itself.</p>
   <span class="k">virtual</span> <span class="kt">char</span><span class="o">*</span> <span class="n">readFile</span><span class="p">(</span><span class="kt">char</span><span class="o">*</span> <span class="n">path</span><span class="p">)</span> <span class="o">=</span> <span class="mi">0</span><span class="p">;</span>
   <span class="k">virtual</span> <span class="kt">void</span>  <span class="n">writeFile</span><span class="p">(</span><span class="kt">char</span><span class="o">*</span> <span class="n">path</span><span class="p">,</span> <span class="kt">char</span><span class="o">*</span> <span class="n">contents</span><span class="p">)</span> <span class="o">=</span> <span class="mi">0</span><span class="p">;</span>
 <span class="p">};</span>
+</pre></div>
 
-<span class="k">class</span> <span class="nc">PS3FileSystem</span> <span class="o">:</span> <span class="k">public</span> <span class="n">FileSystem</span>
+
+<p>Then we define derived classes for a couple of platforms:</p>
+<div class="codehilite"><pre><span class="k">class</span> <span class="nc">PS3FileSystem</span> <span class="o">:</span> <span class="k">public</span> <span class="n">FileSystem</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
   <span class="k">virtual</span> <span class="kt">char</span><span class="o">*</span> <span class="n">readFile</span><span class="p">(</span><span class="kt">char</span><span class="o">*</span> <span class="n">path</span><span class="p">)</span>
@@ -197,7 +205,7 @@ singleton can even refer to another when initializing itself.</p>
 </pre></div>
 
 
-<p>Now we turn <code>FileSystem</code> into a singleton:</p>
+<p>Next, we turn <code>FileSystem</code> into a singleton:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">FileSystem</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
@@ -344,8 +352,8 @@ design limitation is entrenched in every single call site that uses it:</p>
 
 
 <p>In order to make our <code>Log</code> class support multiple instantiation (like it
-originally did), we&#8217;ll have to fix both the class itself and every single call
-site that uses it. Our convenient access isn&#8217;t so convenient anymore.</p>
+originally did), we&#8217;ll have to fix both the class itself and every line of code
+that mentions it. Our convenient access isn&#8217;t so convenient anymore.</p>
 <aside name="worse">
 
 <p>It could be even worse than this. Imagine your <code>Log</code> class is in a library being
@@ -363,7 +371,7 @@ control when that&#8217;s going to happen. If we let it lazy-initialize itself t
 first time a sound plays, that could be in the middle of an action-packed part
 of the game, causing visibly dropped frames and stuttering gameplay.</p>
 <p>Likewise, games generally need to closely control how memory is laid out in the
-heap to avoid memory <span name="fragment">fragmentation</span>. If our audio
+heap to avoid <span name="fragment">fragmentation</span>. If our audio
 system allocates a chunk of heap when it initializes, we want to know <em>when</em>
 that initialization is going to happen, so that we can control <em>where</em> in the
 heap that memory will live.</p>
@@ -515,6 +523,7 @@ of abstraction.</p>
 
 <p>We want a way to ensure single instantiation <em>without</em> providing global access.
 There are a couple of ways to accomplish this. Here&#8217;s one:</p>
+<p><span name="assert"></span></p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">FileSystem</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
@@ -539,6 +548,25 @@ construct more than one instance. As long as the right code creates the instance
 first, then we&#8217;ve ensured no other code can either get at that instance or
 create their own. The class ensures the single instantiation requirement it
 cares about, but it doesn&#8217;t dictate how the class should be used.</p>
+<aside name="assert">
+
+<p>An <em>assertion</em> function is a way of embedding a contract into your code.
+When <code>assert()</code> is called, it evaluates the expression passed to it. If it
+evaluates to <code>true</code>, then it does nothing and lets the game continue. If it
+evaluates to <code>false</code>, it immediately halts the game at that point. In a
+debug build, it will usually bring up the debugger or at least print out the
+file and line number where the assertion failed.</p>
+<p>An <code>assert()</code> means, &#8220;I assert that this should always be true. If it&#8217;s not,
+that&#8217;s a bug and I want to stop <em>now</em> so you can fix it.&#8221; This lets you
+define contracts between regions of code. If a function asserts that one of
+its arguments is not <code>NULL</code>, that says, &#8220;The contract between me and the
+caller is that I will not be passed <code>NULL</code>.&#8221;</p>
+<p>Assertions help us track down bugs as soon as the game does something
+unexpected, not later when that error finally manifests as something
+visibly wrong to the user. They are fences in your codebase, corralling bugs
+so that they can&#8217;t escape from the code that created them.</p>
+</aside>
+
 <p>The downside with this implementation is that the check to prevent multiple
 instantiation is only done at <em>runtime</em>. The Singleton pattern, in contrast,
 guarantees a single instance at compile time by the very nature of the class&#8217;s
@@ -708,7 +736,7 @@ flexibility with how that object is configured.</p>
 <nav>
   <span class="prev">&larr; <a href="prototype.html">Previous Chapter</a></span>
   <span class="next"><a href="state.html">Next Chapter</a> &rarr;</span>
-  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+  <span class="toc">&equiv; <a href="/">The Book</a></span>
 </nav>
 </div>
 </div>
