--- a/html/observer.html
+++ b/html/observer.html
@@ -311,7 +311,7 @@ frameworks.</p>
 game programmers what
 they think about this pattern, they bring up a few complaints. Let&#8217;s see what we
 can do to address them, if anything.</p>
-<h2><a href="#"it's-too-slow"" name=""it's-too-slow"">&#8220;It&#8217;s Too Slow&#8221;</a></h2>
+<h2><a href="#it's-too-slow" name="it's-too-slow">&#8220;It&#8217;s Too Slow&#8221;</a></h2>
 <p>I hear this a lot, often from programmers who don&#8217;t actually know the details of
 the pattern. They have a default assumption that anything that smells like a
 &#8220;design pattern&#8221; must involve piles of classes and indirection and other
@@ -358,7 +358,7 @@ though. If an observer tries to grab a lock that the subject has, you can
 deadlock the game. In a highly threaded engine, you may be better off with
 asynchronous communication using an <a href="event-queue.html"
 class="pattern">Event Queue</a>.</p>
-<h2><a href="#"it-does-too-much-dynamic-allocation"" name=""it-does-too-much-dynamic-allocation"">&#8220;It Does Too Much Dynamic Allocation&#8221;</a></h2>
+<h2><a href="#it-does-too-much-dynamic-allocation" name="it-does-too-much-dynamic-allocation">&#8220;It Does Too Much Dynamic Allocation&#8221;</a></h2>
 <p>Whole tribes of the programmer clan&#8202;&mdash;&#8202;including many game developers&#8202;&mdash;&#8202;have
 moved onto garbage collected languages, and dynamic allocation isn&#8217;t the boogie
 man that it used to be. But for performance-critical software like games, memory
